--- a/cvat-ui/package.json
+++ b/cvat-ui/package.json
@@ -68,6 +68,7 @@
     "@types/redux-logger": "^3.0.9",
     "@types/resize-observer-browser": "^0.1.6",
     "antd": "^4.16.13",
+    "axios": "^0.23.0",
     "copy-to-clipboard": "^3.3.1",
     "cvat-canvas": "file:../cvat-canvas",
     "cvat-canvas3d": "file:../cvat-canvas3d",
